# solar_prediction

./: .dockerignore  .gitignore  Dockerfile  README.md  col_list.csv  pyproject.toml  requirements-api.txt
app/: config.py  dependencies.py  main.py  routers.py  schemas.py
notebooks/: 00_solar_capacity_production.ipynb  00_weather_coordinates.ipynb  01_data_exploration.ipynb  02_feature_engineering.ipynb  03_feature_selection.ipynb  03_selection_and_model_training.ipynb  04_models.ipynb  05_walk_forward_and_tracking_metrics.ipynb
pipelines/: inference_data_pipeline.py  inference_pipeline.py  quantile_update_pipeline.py  training_data_pipeline.py  training_pipeline.py
scripts/: inference.py  rolling_quantile.py  run_etl.py  run_training_etl.py  training.py
src/: config.py
src/data_pipeline/: data_collection.py  data_preparation.py  data_processing.py  installed_power_data_collection.py  prepare_data.py  processors.py  run_etl.py  run_training_etl.py  weather_data_collection.py
src/data_preparation/: barycentre.py  fetch_data.py  fetching_data.py  prepare_data.py
src/etl/: data_preparation.py  processors.py  schemas.py
src/models/: architectures.py  contracts.py  model_wrappers.py
src/pipelines/: inference_data_pipeline.py  quantile_update_pipeline.py  training_pipeline.py
src/services/: supabase_api.py  supabase_service.py
src/training/: engine.py  pipelines.py
src/utils/: barycentre.py  config.py  logger.py  logging_utils.py  metrics.py
tests/: STL_decomposition.ipynb  cnn_lstm.py  conftest.py  greywolf.py  greywolf_optimizer_poc.py  test_api.py
(+16 files in other folders)
