[project]
name = "solar-prediction"
version = "0.1.0"
description = ""
authors = [
    {name = "Simon.sngs",email = "simon.sngs@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "openmeteo-requests (>=1.7.4,<2.0.0)",
    "optuna (>=4.6.0,<5.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "retry-requests (>=2.0.0,<3.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "supabase (>=2.24.0,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
